tests/ui/error-codes/E0565-1.rs
// deprecated doesn't currently support literals
#[deprecated("since")] //~ ERROR E0565
fn f() {  }

fn main() {  }
